# GAME-QT-PUZZLE-GLPeces

./: CMakeLists.txt  README.md  changelog  cmake_uninstall.cmake.in  copying  glpeces.pro  install  readme
auto/: el.aut  t10.aut  t11.aut  t13.aut  t14.aut  t16.aut  t4.aut  t4II.aut  t5.aut  t5II.aut  t6.aut  t6II.aut  t7.aut  t7I.aut  t7II.aut  t8.aut  t8e.aut  t9.aut  ta.aut  tc.aut  te.aut  tf.aut  th.aut  thep.aut  thex.aut  tou.aut  trec.aut  treg.aut  ts.aut  tx.aut
fig/: el.fig  t10.fig  t11.fig  t12.fig  t13.fig  t14.fig  t16.fig  t4.fig  t4II.fig  t5.fig  t5II.fig  t6.fig  t6II.fig  t7.fig  t7I.fig  t7II.fig  t8.fig  t8e.fig  t9.fig  t9t.fig  tCII.fig  ta.fig  tb.fig  tc.fig  tcI.fig  te.fig  tf.fig  th.fig  thep.fig  thex.fig  tou.fig  tr.fig  trec.fig  treg.fig  ts.fig  tsl.fig  tst.fig  tstII.fig  tstIII.fig  tx.fig
help/: index.html
help/ca/: index.html
help/ca/html/: ColocarPeces.htm  Concurs.htm  Credits.htm  DescripcioJoc.htm  Menu.htm  MovimentPeces.htm  Nivells.htm  Simetria.htm  colabora.html  crearfigures.html  generacio.html  personalitza_colors.html  presentacio.htm
help/en/: index.html
help/en/html/: ColocarPeces.htm  Concurs.htm  Credits.htm  DescripcioJoc.htm  Menu.htm  MovimentPeces.htm  Nivells.htm  Simetria.htm  colabora.html  crearfigures.html  generacio.html  personalitza_colors.html  presentacio.htm
help/es/: index.html
help/es/html/: ColocarPeces.htm  Concurs.htm  Credits.htm  DescripcioJoc.htm  Menu.htm  MovimentPeces.htm  Nivells.htm  Simetria.htm  colabora.html  crearfigures.html  generacio.html  personalitza_colors.html  presentacio.htm
help/fr/: index.html
help/fr/html/: ColocarPeces.htm  Concurs.htm  Credits.htm  DescripcioJoc.htm  Menu.htm  MovimentPeces.htm  Nivells.htm  Simetria.htm  colabora.html  crearfigures.html  generacio.html  personalitza_colors.html  presentacio.htm
help/gl/: index.html
help/gl/html/: ColocarPeces.htm  Concurs.htm  Credits.htm  DescripcioJoc.htm  Menu.htm  MovimentPeces.htm  Nivells.htm  Simetria.htm  colabora.html  crearfigures.html  generacio.html  personalitza_colors.html  presentacio.htm
help/it/: index.html
help/it/html/: ColocarPeces.htm  Concurs.htm  Credits.htm  DescripcioJoc.htm  Menu.htm  MovimentPeces.htm  Nivells.htm  Simetria.htm  colabora.html  crearfigures.html  generacio.html  personalitza_colors.html  presentacio.htm
help/pt/: index.html
help/pt/html/: ColocarPeces.htm  Concurs.htm  Credits.htm  DescripcioJoc.htm  Menu.htm  MovimentPeces.htm  Nivells.htm  Simetria.htm  colabora.html  crearfigures.html  generacio.html  personalitza_colors.html  presentacio.htm
images/: glpeces-48x48.xpm  glpeces-64x64.xpm
locales/: locale_ca.lo  locale_de.lo  locale_en.lo  locale_es.lo  locale_eu.lo  locale_fr.lo  locale_gl.lo  locale_it.lo  locale_pt.lo  locale_pt_BR.lo
menu/: glpeces  glpeces.appdata.xml  glpeces.desktop
scr/: comprovafigures.cpp  comprovafigures.h  configuracio.cpp  configuracio.h  conjuntpeces.cpp  conjuntpeces.h  constants.h  creaconcurs.cpp  creaconcurs.h  desafigura.cpp  desafigura.h  frmDesaFigura.ui  frmPrincipal.cpp  frmPrincipal.h  funcions.cpp  funcions.h  main.cpp  peca.cpp  peca.h  rellotge.cpp  rellotge.h  ui_frmDesaFigura.h
